# mq-hackathon-2026

mq-hackathon-2026/: .gitignore  corp-laptop-setup.md  demo.py  pyproject.toml  requirements.txt
mq-hackathon-2026/.kiro/specs/mq-guardian-platform/: .config.kiro  design.md  requirements.md  tasks.md
mq-hackathon-2026/agent_brain/: __init__.py  graph.py  llm_config.py  state.py  steady_state.py
mq-hackathon-2026/api/: __init__.py
mq-hackathon-2026/capacity_planning/: __init__.py  engine.py
mq-hackathon-2026/chatbot/: __init__.py  serve_engine.py  stream_shim.py
mq-hackathon-2026/chatbot/static/: index.html
mq-hackathon-2026/data/: as_is_topology.csv
mq-hackathon-2026/decision_engine/: __init__.py  engine.py
mq-hackathon-2026/event_bus/: __init__.py  consumer.py  producer.py  schemas.py
mq-hackathon-2026/graph_store/: __init__.py  neo4j_client.py  schema.py
mq-hackathon-2026/iac_engine/: __init__.py  ansible_generator.py  pipeline.py  terraform_generator.py
mq-hackathon-2026/impact_analysis/: __init__.py  engine.py
mq-hackathon-2026/models/: __init__.py  domain.py
mq-hackathon-2026/monitoring/: __init__.py
mq-hackathon-2026/optimizer/: __init__.py  engine.py
mq-hackathon-2026/policy_engine/: __init__.py  engine.py
mq-hackathon-2026/sandbox/: __init__.py
mq-hackathon-2026/tests/: __init__.py  test_capacity_planning.py  test_csv_parser.py  test_decision_engine.py  test_domain_models.py  test_event_consumer.py  test_event_producer.py  test_event_schemas.py  test_graph_schema.py  test_impact_analysis.py  test_neo4j_client.py  test_optimizer.py  test_policy_engine.py  test_transformer.py
mq-hackathon-2026/tools/: generate_dataset.py
mq-hackathon-2026/transformer/: __init__.py  analyzer.py  core.py  rule_checker.py  transform.py  validators.py
mq-hackathon-2026/wheels/: langchain_core-1.2.26-py3-none-any.whl  langchain_ollama-1.0.1-py3-none-any.whl  langchain_openai-1.1.12-py3-none-any.whl  langsmith-0.7.25-py3-none-any.whl
