[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "mq-guardian-platform"
version = "0.1.0"
description = "Enterprise-grade IBM MQ topology management platform with dual-mode operation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
dependencies = [
    # --- Core (pure-Python, widely approved) ---
    "pydantic>=2.0,<3.0",
    "jsonschema>=4.0,<5.0",
    "jinja2>=3.1,<4.0",
    "pyyaml>=6.0,<7.0",
    "httpx>=0.27,<1.0",
    # --- Web framework ---
    "fastapi>=0.110,<1.0",
    "uvicorn>=0.29,<1.0",
    # --- Agent orchestration (Tachyon_Studio requirement) ---
    "langgraph>=0.2,<1.0",
    "langchain>=0.2,<1.0",
    "langchain-core>=0.2,<1.0",
    # --- Observability (optional, pure-Python) ---
    "prometheus-client>=0.20,<1.0",
    # --- IaC template parsing ---
    "python-hcl2>=4.0,<5.0",
    # --- Forecasting (replaces Prophet — no C/C++ compilation) ---
    "statsmodels>=0.14,<1.0",
]

# Optional: install these only when enterprise infrastructure is available
[project.optional-dependencies]
enterprise = [
    "neo4j>=5.0,<6.0",
    "confluent-kafka>=2.3,<3.0",
]

dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=5.0,<6.0",
    "hypothesis>=6.0,<7.0",
    "ruff>=0.4,<1.0",
    "mypy>=1.10,<2.0",
]

[tool.setuptools.packages.find]
include = [
    "transformer*",
    "graph_store*",
    "agent_brain*",
    "event_bus*",
    "iac_engine*",
    "policy_engine*",
    "decision_engine*",
    "impact_analysis*",
    "capacity_planning*",
    "optimizer*",
    "sandbox*",
    "chatbot*",
    "monitoring*",
    "models*",
    "api*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
